--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <h1>Christmas Countdown 🎄</h1>
+  <div class="container">
+      <p id="countdown-display" class="countdown-display">Today is</p>
+      <div class="flex">
+      <p class="countdown"></p>
+      <p class="counthour"></p>
+      <p class="countminute"></p>
+      <p class="countsecond"></p>
+      <p class="countdown-text">Days 'til Christmas!</p>
+      </div>
+  </div>
+  <script src="index.pack.js"></script>
 </body>
 </html>
