edit script source

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
       <p class="countdown-text">Days 'til Christmas!</p>
       </div>
   </div>
-  <script src="index.pack.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
